syntax = "proto3";
package fx.v1;

enum Currency {
  CURRENCY_UNSPECIFIED = 0;

  AED = 1;  AFN = 2;  ALL = 3;  AMD = 4;  ANG = 5;  AOA = 6;  ARS = 7;  AUD = 8;  AWG = 9;  AZN = 10;
  BAM = 11; BBD = 12; BDT = 13; BGN = 14; BHD = 15; BIF = 16; BMD = 17; BND = 18; BOB = 19; BRL = 20;
  BSD = 21; BTN = 22; BWP = 23; BYN = 24; BZD = 25; CAD = 26; CDF = 27; CHF = 28; CLP = 29; CNY = 30;
  COP = 31; CRC = 32; CUP = 33; CVE = 34; CZK = 35; DJF = 36; DKK = 37; DOP = 38; DZD = 39; EGP = 40;
  ERN = 41; ETB = 42; EUR = 43; FJD = 44; FKP = 45; FOK = 46;
  GBP = 47; GEL = 48; GGP = 49; GHS = 50; GIP = 51; GMD = 52; GNF = 53; GTQ = 54; GYD = 55; HKD = 56;
  HNL = 57; HRK = 58; HTG = 59; HUF = 60; IDR = 61; ILS = 62; IMP = 63; INR = 64; IQD = 65; IRR = 66;
  ISK = 67; JEP = 68; JMD = 69; JOD = 70; JPY = 71; KES = 72; KGS = 73; KHR = 74; KID = 75; KMF = 76;
  KRW = 77; KWD = 78; KYD = 79; KZT = 80; LAK = 81; LBP = 82; LKR = 83; LRD = 84; LSL = 85; LYD = 86;
  MAD = 87; MDL = 88; MGA = 89; MKD = 90; MMK = 91; MNT = 92; MOP = 93; MRU = 94; MUR = 95; MVR = 96;
  MWK = 97; MXN = 98; MYR = 99; MZN = 100; NAD = 101; NGN = 102; NIO = 103; NOK = 104; NPR = 105; NZD = 106;
  OMR = 107; PAB = 108; PEN = 109; PGK = 110; PHP = 111; PKR = 112; PLN = 113; PYG = 114; QAR = 115; RON = 116;
  RSD = 117; RUB = 118; RWF = 119; SAR = 120; SBD = 121; SCR = 122; SDG = 123; SEK = 124; SGD = 125; SHP = 126;
  SLE = 127; SOS = 128; SRD = 129; SSP = 130; STN = 131; SYP = 132; SZL = 133; THB = 134; TJS = 135; TMT = 136;
  TND = 137; TOP = 138; TRY = 139; TTD = 140; TVD = 141; TWD = 142; TZS = 143; UAH = 144; UGX = 145; USD = 146;
  UYU = 147; UZS = 148; VES = 149; VND = 150; VUV = 151; WST = 152; XAF = 153; XCD = 154; XDR = 155; XOF = 156;
  XPF = 157; YER = 158; ZAR = 159; ZMW = 160; ZWL = 161;
}


message CurrencyExchangeRequest{
  Currency base_currency = 1;
  Currency desired_currency = 2;
  double amount = 3;
}

message CurrencyExchangeResponse{
  double amount = 1;
}

service CurrencyExchange{
  rpc GetCurrencyExchange(CurrencyExchangeRequest) returns (CurrencyExchangeResponse){}
}